src/RcsbFv/RcsbFvStyles/RcsbFvRow.module.scss
$color-rcsbFvBorder: #DDDDDD;
$border-rcsbFvRowTrack: 1px;

.rcsbFvRootContainer * {
    box-sizing: content-box;
}

.rcsbFvRootContainer {
    width: fit-content;
}

.rcsbFvBoard {
    /*! keep */
}

.rcsbFvRowTitle{
  float:left;
}

.rcsbFvRowMark > div {
    visibility: hidden;
}

.rcsbFvGlowTitle:not(.rcsbFvRowAxis) .rcsbFvRowMark > div {
    visibility: visible !important;
}

.rcsbFvRowMarkComponent {
    width: 0;
    height: 0;
    border-top: 6px solid transparent;
    border-bottom: 6px solid transparent;
    border-left: 6px solid #666;
}

.rcsbFvRow:not(.rcsbFvRowAxis) > .rcsbFvRowTitle > .rcsbFvRowTitleProvenanceFlag{
    background-color: $color-rcsbFvBorder;
    width: 1px;
}

.rcsbFvRowTitleText {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 12px;
    text-align: right;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    user-select: none;
}

.rcsbFvRowTitleTextExpand {
    position: absolute;
    background-color: #FFF;
    box-shadow: 0 0 3px 3px #FFF;
    z-index: 10;
}

.rcsbFvRowTrack{
    float:right;
}

.rcsbFvRow-enter{
    opacity: 0;
}

.rcsbFvRow-enter-active{
    opacity: 1;
    transition: opacity 500ms;
}

.rcsbFvRow-enter-done{
    opacity: 1;
}

.rcsbFvRow-exit{
    opacity: 1;
}

.rcsbFvRow-exit-active{
    opacity: 0;
    transition: opacity 500ms;
}

.rcsbFvRow-exit-done{
    position: absolute;
    opacity: 0;
    z-index: -1;
}

.rcsbFvTooltip {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 12px;
    border: $border-rcsbFvRowTrack solid $color-rcsbFvBorder;
    padding-left:8px;
    padding-right:8px;
    background-color:#F9F9F9;
    vertical-align: middle;
    position: absolute;
    z-index: 2147483647;
    line-height: 25px;
}

.rcsbFvTooltipDescription {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 12px;
    border: $border-rcsbFvRowTrack solid $color-rcsbFvBorder;
    background-color:#F9F9F9;
    position: absolute;
    padding-left:8px;
    padding-right:8px;
    color: #888888;
    z-index: 2147483646;
}

.rcsbFvTooltipDescription div {
    vertical-align: middle;
    text-align: right;
    max-width: 640px;
    line-height: 25px;
}

.rcsbFvTooltipDescription div:not(:last-child) {
    border-bottom: $border-rcsbFvRowTrack solid $color-rcsbFvBorder;
}

.rcsbGlow {
    pointer-events: none;
    position: relative;
}

.rcsbNoGlow {
    pointer-events: none;
    position: relative;
}

.rcsbGlow div {
    pointer-events: none;
    position: absolute;
    transition: box-shadow 0.3s;
    box-shadow: 0px 0px 8px #c8c8c8;
}

.rcsbNoGlow div {
    pointer-events: none;
    position: absolute;
    transition: box-shadow 0.3s;
    box-shadow: none;
}

.rcsbRowGlow {
    pointer-events: none;
    position: relative;
}

.rcsbNoRowGlow {
    pointer-events: none;
    position: relative;
}

.rcsbRowGlow div {
    pointer-events: none;
    position: absolute;
    border: 1px solid rgba(255,204,204,0.75);
}

.rcsbNoRowGlow div {
    pointer-events: none;
    position: absolute;
    border: none;
}

.rcsbUI {
    position: absolute;
    z-index: 2147483646;
    padding-left: 10px;
}

.rcsbUI * {
    box-sizing: border-box !important;
}

$border-rcsbFvIcon: 1px;
$width-rcsbFvUI: 24px;
$height-rcsbFvUI: 38px;

.rcsbUIButton {
    height: $height-rcsbFvUI;
}

.rcsbTopUI {
    width: $width-rcsbFvUI;
    height: 12px;
    border-top-left-radius: 12px;
    border-top-right-radius: 12px;
    background-color: #FCFCFC;
    border: $border-rcsbFvIcon solid $color-rcsbFvBorder;
    border-bottom: none;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.rcsbBottomUI {
    width: $width-rcsbFvUI;
    height: 12px;
    border-bottom-left-radius: 12px;
    border-bottom-right-radius: 12px;
    background-color: #FCFCFC;
    border: $border-rcsbFvIcon solid $color-rcsbFvBorder;
    border-top: none;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.rcsbIcon {
    padding: 3px 2px 3px 2px;
    border-right: $border-rcsbFvIcon solid $color-rcsbFvBorder;
    border-left: $border-rcsbFvIcon solid $color-rcsbFvBorder;
    width: $width-rcsbFvUI;
    height: $height-rcsbFvUI;
    background-color: #FCFCFC;
    cursor: pointer;
    color: #999;
}

.rcsbCollapsedIcon {
    width: $width-rcsbFvUI;
    height: $width-rcsbFvUI;
    padding: 3px 3px 3px 3px;
    border: $border-rcsbFvIcon solid $color-rcsbFvBorder;
    background-color: #FCFCFC;
    border-radius: 50%;
    color: #333;
}

.rcsbIcon:hover {
    color:#333;
}

.rcsbSmoothDivHide {
    visibility: hidden;
    opacity: 0;
    transition: visibility 0s linear 300ms, opacity 300ms;
}

.rcsbSmoothDivDisplay {
    visibility: visible;
    opacity: 1;
    transition: visibility 0s linear 0s, opacity 300ms;
}

.rcsbCollapsedUIDiv{
    z-index: 2147483646;
}

.rcsbCollapseUI {
    opacity: 0;
}

.rcsbCollapseUI-enter{
    opacity: 0;
}

.rcsbCollapseUI-enter-active{
    opacity: 1;
    transition: opacity 300ms;
}

.rcsbCollapseUI-enter-done{
    opacity: 1;
}

.rcsbCollapseUI-exit{
    opacity: 1;
    z-index: -1;
}

.rcsbCollapseUI-exit-active{
    opacity: 0;
    z-index: -1;
    transition: opacity 300ms;
}

.rcsbCollapseUI-exit-done{
    opacity: 0;
    z-index: -1;
    pointer-events: none;
}

.rcsbExpandUI {
    opacity: 1;
}

.rcsbExpandUI-enter{
    opacity: 0;
}

.rcsbExpandUI-enter-active{
    opacity: 1;
    transition: opacity 300ms;
}

.rcsbExpandUI-enter-done{
    opacity: 1;
}

.rcsbExpandUI-exit{
    opacity: 1;
}

.rcsbExpandUI-exit-active{
    opacity: 0;
    transition: opacity 300ms;
}

.rcsbExpandUI-exit-done{
    opacity: 0;
    z-index: -1;
    pointer-events: none;
}

.rcsbZoomHelp {
    position: absolute;
    pointer-events: none;
    max-width: 250px;
    font-size: 12px;
    border: $border-rcsbFvRowTrack solid $color-rcsbFvBorder;
    background-color: #FCFCFC;
    padding: 10px 5px 10px 5px;
    z-index: 2147483646;
}

.rcsbZoomHelp div:not(:first-child){
    padding: 0 10px 0 10px;
}

.rowTrackBoardSatus {
    font-size: 14px;
    color: #CCC;
    position: absolute;
    z-index: 2147483646;
}

.rowTrackBoardSatus > span {
    font-weight: bold;
    color: #666;
}

[popper-hidden] {
    visibility: hidden;
    pointer-events: none;
}

